# OmniParser

./: .gitignore  .pre-commit-config.yaml  README.md  demo.ipynb  huggingface_download.py  pyproject.toml
eval/: ss_pro_gpt4o_omniv2.py
omnibox/: Dockerfile  compose.yml
omnibox/scripts/: manage_vm.ps1  manage_vm.sh
omnibox/vm/win11setup/firstboot/: install.bat
omnibox/vm/win11setup/setupscripts/: setup-tools.psm1  setup.ps1
omnibox/vm/win11setup/setupscripts/server/: main.py  requirements.txt
omnitool/: settings.py
omnitool/gradio/: app.py  app_new.py  app_streamlit.py  gradio_demo.py  loop.py
omnitool/gradio/agent/: anthropic_agent.py  vlm_agent.py  vlm_agent_with_orchestrator.py
omnitool/gradio/agent/llm_utils/: groqclient.py  oaiclient.py  omniparserclient.py  utils.py
omnitool/gradio/executor/: anthropic_executor.py
omnitool/gradio/tools/: base.py  computer.py  screen_capture.py
omnitool/omniparserserver/: omniparserserver.py
omnitool/util/: box_annotator.py  omniparser.py  utils.py
