[project]
name = "omnitool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "anthropic[bedrock,vertex]>=0.37.1",
    "azure-identity>=1.21.0",
    "boto3>=1.28.57",
    "dashscope>=1.23.1",
    "dill>=0.4.0",
    "easyocr>=1.7.2",
    "einops==0.8.0",
    "google-auth>=2,<3",
    "gradio>=5.13.2",
    "groq>=0.22.0",
    "jsonschema==4.22.0",
    "numpy==1.26.4",
    "openai==1.3.5",
    "opencv-python>=4.11.0.86",
    "opencv-python-headless>=4.11.0.86",
    "paddleocr>=2.10.0",
    "paddlepaddle>=3.0.0",
    "pre-commit==3.8.0",
    "pyautogui==0.9.54",
    "pydantic==2.5.2",
    "pytest==8.3.3",
    "pytest-asyncio==0.23.6",
    "ruff==0.6.7",
    "screeninfo>=0.8.1",
    "streamlit>=1.38.0",
    "supervision==0.18.0",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.51.3",
    "uiautomation>=2.0.25",
    "ultralytics==8.3.70",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
respect-gitignore = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN201",
    "ANN202",
    "D103",
    "D104",
    "PGH003",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLW0603",
    "S101",
    "S105",
    "S106",
    "TRY003",
    "TRY201",
    "TRY301",
]
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

typing-modules = [
    "typing",
    "types",
    "typing_extensions",
    "mypy",
    "mypy_extensions",
]

[tool.ruff.lint.isort]
order-by-type = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "ANN001",
    "ANN002",
    "ANN003",
    "ANN101",
    "ANN201",
    "ANN202",
    "D103",
    "D104",
    "PGH003",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLW0603",
    "S101",
    "S105",
    "S106",
    "TRY003",
    "TRY201",
    "TRY301",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
